[gd_scene load_steps=5 format=3 uid="uid://b5f1vjd5sjx45"]

[ext_resource type="Script" uid="uid://dud7nsh4exb4b" path="res://skills_menu.gd" id="1_jts4i"]
[ext_resource type="Theme" uid="uid://bkvsc627baopy" path="res://THEMES/DEFAULT.tres" id="1_o5t0m"]
[ext_resource type="Texture2D" uid="uid://b5r3hqmbs000r" path="res://THEMES/nine_path_panel.png" id="3_2q15i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o5t0m"]
texture = ExtResource("3_2q15i")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 5.0

[node name="SkillsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9916953, 0.9727259)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jts4i")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -568.0
offset_top = -312.0
offset_right = -468.0
offset_bottom = -201.0
theme_override_styles/panel = SubResource("StyleBoxTexture_o5t0m")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Skills"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="SkillList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2

[node name="Panel3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.71855044)
theme = ExtResource("1_o5t0m")
